--- a/multiplayer/server/package.json
+++ b/multiplayer/server/package.json
@@ -4,7 +4,7 @@
   "description": "Multiplayer test with websockets",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/HanaDigital/physics-with-p5js#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.6",
     "ws": "^7.4.1"
